    for some kinds of constructs.

  Added savesrc=1 option to copy source code into the profile
    so reports are not affected by changes to the source files.

Reporting:

  Time spent within nested string evals is accounted for.

  Fixed searching @INC for source files for reports.

  Dramatically increased performance of nytprofhtml
    relative to the 2.07 version.

  Summary tables can be sorted by clicking on header columns.

  Statement timings are now shown as integers in appropriate
    units: seconds, milliseconds, microseconds or nanoseconds.

  Hovering over times in subroutine or file summary tables
    now shows the percentage time.

  Improved HTML conformance thanks to Leland Johnson.

=head2 Changes in Devel::NYTProf 2.07 (svn r583) 1st Nov 2008

Core:

  NOTE: The file format has changed. Files from 2.04 and 2.05
  can still be read by this version.

  Subroutine inclusive time no longer counts time
    spent recursed into the same subroutine. That time is
    now recorded separately, along with the max recursion depth.

  Added stmts=0 option to disable the statement profiler
    so just the subroutine profiler runs. That reduces the
    profiler overhead and gives you much smaller data files.

  Now builds on Windows, with thanks to Jan Dubois!

  Removed use of vfscanf() to improve portability to Windows
    and old unix systems, thanks to Jan Dubois.

  The profiler takes more care to avoid changing $!.

Reports:

  Fixed significant error in time reported as spent in a subroutine,
    which was showing the sum of the inclusive and exclusive time
    instead of just the inclusive time.

  Subroutine calls made within string evals are now shown in reports.
  Subroutine caller details now includes calls from within string evals.

  XS subs (xsubs) are now automatically associated with a source
    file that defines normal subs in the same package.
  Callers and timing information for xsubs are now shown at the