@@ -113,8 +113,9 @@ Add tests for -block and -sub csv reports.
 Add tests with various kinds of blocks and loops (if, do, while, until, etc).
 
 Add mechanism to specify options inside the .p file, such as
-
   # NYTPROF=...
+though this may not be needed if t/20.runtests.t gets dropped
+and the logic moved to a library for traditional t/*.t files to use.
 
 Add mechanism to specify inside the .p file that NYTProf
 should not be loaded via the command line. That's needed to test
@@ -325,16 +326,8 @@ Investigate style.css problem when using --outfile=some/other/dir
 
 Add option to set processor affinity.
 
-Trace level 1 should show totals fids, subs etc.
-
 Index should show eval fids in some form - collapsed per location?
 Or just included in the stats for the outer source file.
-
-Usage of SubInfo merge_in needs to also merge sub_callers info.
-Perhaps restructure sub_callers to hang off sub_subinfo.
-That also avoids the need to duplicate subname.
-
-Check forking when stmts=0.
 
 Sub profiler should avoid sv_setpvf(subname_sv, "%s::%s", stash_name, GvNAME(gv));
 because it's expensive (Perl_sv_setpvf_nocontext accounts for 29% of pp_entersub_profiler).
@@ -353,6 +346,9 @@ ASAP (to avoid problems with scripts that chdir).
 
 Add (very) basic nytprofhtml test (ie it runs and produces output) so we check the VERSION has been updated.
 
-Ponder setting PERLDBf_SAVESRC etc
-
 called by list: "by $subname line $line of $file" make the file not include the inc portion
+
+Add caller sub name (via $profile->subname_at_file_line($fid, $line)) to sub
+caller info so report_src_line() doesn't have to do the expensive lookup.
+It's also a useful step on the road to the profiler storing the calling sub's
+name when generating the profile.
